# pc2-projekt

./: .gitignore  CMakeLists.txt  io.cpp  main.cu
