cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(cuda_convection LANGUAGES CUDA CXX)
find_package(CUDA 9.0 REQUIRED)
message(STATUS "Found CUDA ${CUDA_VERSION_STRING} at ${CUDA_TOOLKIT_ROOT_DIR}")
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -rdc=true -arch=sm_60")
add_executable(cuda_convection main.cu)